--- a/style.css
+++ b/style.css
@@ -1,14 +1,24 @@
 #centres {
 	list-style-type: none;
 }
-#download-link {
-	display: none;
-}
 
 #canvas {
-	width: 98vw;
+	width: 96vw;
 }
-.controls {
-	width: 31.7vw;
-	height: 7vh;
+
+.panel ul {
+	width: 96vw;
+	list-style-type: none;
+	padding: 0;
+}
+
+.panel ul li a {
+	float: left;
+	width: 30vw;
+	line-height: 6vh;
+	color: white;
+	text-align: center;
+	text-decoration: none;
+	background-color: #333;
+	border: 1vw solid white;
 }
